--- a/Ensemble Learning/Random Forests.ipynb
+++ b/Ensemble Learning/Random Forests.ipynb
@@ -7,7 +7,7 @@
     "# **Tutorial: Random Forests**\n",
     "### By Kostas Hatalis\n",
     "\n",
-    "**Prerequisite Notebooks:** *Decision Trees, Ensemble Learning*"
+    "**Prerequisite Notebooks:** *Decision Trees, Ensemble Learning, Bagging*"
    ]
   },
   {
@@ -31,9 +31,9 @@
     "___\n",
     "## **Random Forests**\n",
     "\n",
-    "The introduction of random forests for machine learning was first made in a paper by Leo Breiman [1] in 2001. This paper describes a method of building a forest of uncorrelated trees using a CART like procedure, combined with randomized node optimization and bagging. \n",
+    "The introduction of Random Forests (RF) for machine learning was first made in a paper by Leo Breiman [1] in 2001. This paper describes a method of building a forest of uncorrelated trees using a CART like procedure, combined with randomized node optimization and bagging. \n",
     "\n",
-    "Random forests (RF) are an extension of the bagging algorithm that fit a number of decision tree classifiers on various sub-samples of the dataset and use averaging to improve the predictive accuracy and control over-fitting. The sub-sample size is always the same as the original input sample size (unlike bagging where it can vary) and the samples are drawn with replacement. The difference with bagging has to do with how a decision tree is split at each node. \n",
+    "RFs are an extension of the bagging algorithm that fit a number of decision tree classifiers on various sub-samples of the dataset and use averaging to improve the predictive accuracy and control over-fitting. The sub-sample size is always the same as the original input sample size (unlike bagging where it can vary) and the samples are drawn with replacement. The difference with bagging has to do with how a decision tree is split at each node. \n",
     "\n",
     "When splitting a node during the construction of the tree, the split that is chosen is no longer the best split among all features. Instead, the split that is picked is the best split among a random subset (without replacement) of the features. As a result of this randomness, the **bias of the forest usually slightly increases** (with respect to the bias of a single non-random tree) but, due to averaging, **its variance decreases**, usually more than compensating for the increase in bias, hence yielding an overall better model.\n",
     "\n",
@@ -45,6 +45,8 @@
     "    - ($d$ < total number of featuresd)\n",
     "    - in sklean $d$ = sqrt(total number of featuresd)\n",
     "- Aggregate predictions by majority voting or averaging\n",
+    "\n",
+    "This process is illustrated in the figure below (from [2]):\n",
     "\n",
     "<img src=\"images/random_forest.PNG\" width=\"600\">\n",
     "\n",
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -187,8 +189,7 @@
     "\n",
     "# Make a horizontal bar plot\n",
     "sorted_importances_rf.plot(kind='barh', color='lightgreen'); \n",
-    "plt.title('Features Importances')\n",
-    "plt.show()"
+    "plt.title('Features Importances');\n"
    ]
   },
   {
@@ -197,17 +198,17 @@
    "source": [
     "### **Random Forest Hyperparameters**\n",
     "\n",
-    "The main parameters to adjust when using these methods is **n_estimators** and **max_features**. The best parameter values should always be cross-validated. \n",
+    "The main parameters to adjust when using these methods is `n_estimators` and `max_features`. The best parameter values should always be cross-validated. \n",
     "\n",
-    "**n_estimators** is the number of trees in the forest. The larger the better (100+), but also the longer it will take to compute. In addition, note that results will stop getting significantly better beyond a critical number of trees. \n",
+    "`n_estimators` is the number of trees in the forest. The larger the better (100+), but also the longer it will take to compute. In addition, note that results will stop getting significantly better beyond a critical number of trees. \n",
     "\n",
-    "**max_features** is the size of the random subsets of features to consider when splitting a node. The lower the greater the reduction of variance, but also the greater the increase in bias. Empirical good default values are max_features=n_features/3 for regression problems, and max_features=sqrt(n_features) for classification tasks (where n_features is the number of features in the data). Generally it should be set to a lower value, as a way of forcing discrepancy between trees. \n",
+    "`max_features` is the size of the random subsets of features to consider when splitting a node. The lower the greater the reduction of variance, but also the greater the increase in bias. Empirical good default values are max_features=n_features/3 for regression problems, and max_features=sqrt(n_features) for classification tasks (where n_features is the number of features in the data). Generally it should be set to a lower value, as a way of forcing discrepancy between trees. \n",
     "\n",
-    "Good results are often achieved when setting **max_depth**=None in combination with **min_samples_split**=2, both these settings allow developing full trees. When we increase min_samples_split, each tree in the forest becomes more constrained as it has to consider more samples at each node.\n",
+    "Good results are often achieved when setting `max_depth=None` in combination with `min_samples_split=2`, both these settings allow developing full trees. When we increase min_samples_split, each tree in the forest becomes more constrained as it has to consider more samples at each node.\n",
     "\n",
-    "For early stopping set the regularization parameter **min_weight_fraction_leaf** to a sufficiently large value (e.g., 0.05) such that out-of-bag accuracy converges to out-of-sample (k-fold) accuracy.\n",
+    "For early stopping set the regularization parameter `min_weight_fraction_leaf` to a sufficiently large value (e.g., 0.05) such that out-of-bag accuracy converges to out-of-sample (k-fold) accuracy.\n",
     "\n",
-    "**class_weight**='balanced_subsample' will help you prevent the trees from misclassifying minority classes.\n",
+    "`class_weight='balanced_subsample'` will help you prevent the trees from misclassifying minority classes.\n",
     "\n",
     "Note: fitting RF on a PCA of the features may speed up calculations and reduce some overfitting."
    ]
@@ -245,11 +246,13 @@
     "\n",
     "[1] Breiman L, \"Random Forests\", Machine Learning (2001).\n",
     "    \n",
-    "[2] https://scikit-learn.org/stable/modules/ensemble.html#forest\n",
+    "[2] https://campus.datacamp.com/courses/machine-learning-with-tree-based-models-in-python/\n",
     "\n",
-    "[3] https://en.wikipedia.org/wiki/Random_forest\n",
+    "[3] https://scikit-learn.org/stable/modules/ensemble.html#forest\n",
     "\n",
-    "[4] https://machinelearningmastery.com/bagging-and-random-forest-ensemble-algorithms-for-machine-learning/\n"
+    "[4] https://en.wikipedia.org/wiki/Random_forest\n",
+    "\n",
+    "[5] https://machinelearningmastery.com/bagging-and-random-forest-ensemble-algorithms-for-machine-learning/\n"
    ]
   }
  ],
