--- a/Ensemble Learning/AdaBoost.ipynb
+++ b/Ensemble Learning/AdaBoost.ipynb
@@ -73,7 +73,7 @@
     "\n",
     "For regression we use MSE for the error rate. Here's a plot of what $\\alpha_m$ will look like for classifiers with different error rates (from [3]):\n",
     "\n",
-    "<img src=\"images/curve.PNG\" width=\"300\">\n",
+    "<img src=\"images/curve.png\" width=\"400\">\n",
     "\n",
     "After weak classifier is trained, we update the weight of each training example with following formula\n",
     "\n",
@@ -180,6 +180,13 @@
     "\n",
     "[8] http://mccormickml.com/2013/12/13/adaboost-tutorial/"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
