--- a/Ensemble Learning/Random Forests.ipynb
+++ b/Ensemble Learning/Random Forests.ipynb
@@ -225,7 +225,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Extremely randomized trees, or ExtraTrees (ET), are the same as random forests with two slight differences:\n",
+    "Extremely randomized trees, or ExtraTrees (ET), introduced in 2006 by Geurts et al. [6], are the same as random forests with two slight differences:\n",
     "\n",
     "1. As in RF's, a random subset of candidate features is used with ET's, but instead of looking for the most discriminative thresholds (the  optimal cut-point for each feature based on information gain), **thresholds are drawn at random for each candidate feature** and the best of these randomly-generated thresholds is picked as the splitting rule. \n",
     "    - This threshold (random cut point) is selected from a uniform distribution within the feature's empirical range (in the tree's training set). Then, of all the randomly generated splits, the split that yields the highest score is chosen to split the node. Similar to ordinary RF's, the number of randomly selected features to be considered at each node can be specified.\n",
@@ -252,8 +252,17 @@
     "\n",
     "[4] https://en.wikipedia.org/wiki/Random_forest\n",
     "\n",
-    "[5] https://machinelearningmastery.com/bagging-and-random-forest-ensemble-algorithms-for-machine-learning/\n"
+    "[5] https://machinelearningmastery.com/bagging-and-random-forest-ensemble-algorithms-for-machine-learning/\n",
+    "\n",
+    "[6] P. Geurts, D. Ernst., and L. Wehenkel, “Extremely randomized trees”, Machine Learning, 63(1), 3-42, 2006.\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
