--- a/Ensemble Learning/AdaBoost.ipynb
+++ b/Ensemble Learning/AdaBoost.ipynb
@@ -17,7 +17,7 @@
     "___\n",
     "## **Boosting**\n",
     "\n",
-    "The concept of boosting, introduced in 1990 by Robert Schapire [1], is an ensemble approach in which several models are trained sequentially with each model learning from the errors of its predecessors. In bagging we wanted low bias, high variance models. In boosting we want high bias models, ie **weak learners** with low accuracy 50-60% (models that are only slightly better than random guessing). Boosting then aims to reduce bias, and to a lesser degree reduce variance; it converts weak learners to strong ones. Hypothesis is that combining many weak learners can yield a stronger learning. \n",
+    "The concept of boosting, sometimes called stagewise additive modeling, introduced in 1990 by Robert Schapire [1], is an ensemble approach in which several models are trained sequentially with each model learning from the errors of its predecessors. In bagging we wanted low bias, high variance models. In boosting we want high bias models, ie **weak learners** with low accuracy 50-60% (models that are only slightly better than random guessing). Boosting then aims to reduce bias, and to a lesser degree reduce variance; it converts weak learners to strong ones. Hypothesis is that combining many weak learners can yield a stronger learning. \n",
     "\n",
     "An example of a weak learner is a CART with a max depth of 1, also called **decision stumps**. This only splits the space in half. Another weak learner is logistic regression. The main idea is to train an ensemble of weak learners sequentially. Then each predictor tries to correct its predecessor. The predictions from all of them are then combined through a weighted majority vote (or sum) to produce the final prediction.\n",
     "\n",
@@ -92,7 +92,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### **TUTORIAL ADABOOST**\n",
+    "### **SKLEARN TUTORIAL ADABOOST**\n",
     "\n",
     "Sklearn implements AdaBoost this with the functions `AdaBoostClassifier` and `AdaBoostRegressor`. The main hyperparameters to tune are:\n",
     "\n",
