Update Time Series Analysis Notes.ipynb

--- a/Time Series Analysis and Forecasting/Time Series Analysis Notes.ipynb
+++ b/Time Series Analysis and Forecasting/Time Series Analysis Notes.ipynb
@@ -4,8 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Time Series Analysis and Forecasting: An Intro Crash Course \n",
-    "## By Kostas Hatalis"
+    "# Time Series Analysis and Forecasting: An Intro Crash Course \n"
    ]
   },
   {
